--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/vmactions/netbsd-vm/issues"
   },
   "homepage": "https://github.com/vmactions/netbsd-vm",
-  "devDependencies": {
+  "dependencies": {
     "@actions/core": "^1.9.0",
     "@actions/exec": "^1.1.1"
   }
