--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,21 @@
 
 name: Test
 
-on: [push]
+on:
+  push:
+    branches:
+      - '*'
+    paths:
+      - '**.sh'
+      - '.github/workflows/test.yml'
+      - 'index.js'
+      - 'conf/*'
 
 jobs:
   testfreebsd:
+    strategy:
+      matrix:
+        release: [ "", "9.2"]
     runs-on: macos-12
     name: A job to run test NetBSD
     env:
@@ -21,6 +32,7 @@ jobs:
           export PKG_PATH="http://cdn.NetBSD.org/pub/pkgsrc/packages/NetBSD/$(uname -p)/$(uname -r|cut -f '1 2' -d.)/All/"
           pkg_add curl
         mem: 2048
+        release: ${{ matrix.release }}
         nat: |
           "8080": "80"
           "8443": "443"
