speed up loading time

--- a/conf/9.2.conf
+++ b/conf/9.2.conf
@@ -1,8 +1,12 @@
 
+BUILDER_VERSION=0.0.5
 
 
-OVA_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v0.0.4/netbsd-9.2.ova.zip"
+CONF_LINK="https://raw.githubusercontent.com/vmactions/netbsd-builder/v${BUILDER_VERSION}/conf/netbsd-${VM_RELEASE}.conf"
 
-CONF_LINK="https://raw.githubusercontent.com/vmactions/netbsd-builder/v0.0.4/conf/netbsd-9.2.conf"
+OVA_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}.ova"
 
+VM_PUBID_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-id_rsa.pub"
+
+HOST_ID_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-mac.id_rsa"
 
