--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -16,7 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
+        with: 
+          token: ${{ secrets.VM_TOKEN }}
       - name: Get latest release
         id: get-latest-release
         uses: InsonusK/get-latest-release@v1.0.1
