--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -56,7 +56,7 @@ jobs:
           git add node_modules
       - uses: EndBug/add-and-commit@v9
         with:
-          message: "Update version to ${{ steps.get-latest-release.outputs.tag_name }}"
+          message: "Generate the project"
           pull: '--rebase --autostash '
           add: |
             README.md
