--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
   test:
     strategy:
       matrix:
-        release: [ 8.0, 8.1, 8.2, 9.0, 9.1, 9.2,  ""]
+        release: [ "8.0", "8.1", "8.2", "9.0", "9.1", "9.2", ""]
     runs-on: macos-12
     name: A job to run test NetBSD
     env:
