--- a/.github/data/datafile.ini
+++ b/.github/data/datafile.ini
@@ -4,7 +4,7 @@ VM_NAME=NetBSD
 
 VM_RUNS_ON=macos-12
 
-VM_PREPARE="pkg_add curl"
+VM_PREPARE="/usr/sbin/pkg_add curl"
 
 VM_RUN=@.github/data/run.txt
 
