--- a/.github/data/datafile.ini
+++ b/.github/data/datafile.ini
@@ -2,13 +2,13 @@
 
 VM_NAME=NetBSD
 
-VM_RUNS_ON=macos-12
+VM_RUNS_ON=ubuntu-22.04
 
 VM_PREPARE="/usr/sbin/pkg_add curl"
 
 VM_RUN=@.github/data/run.txt
 
-VM_SET_RELEASE=9.2
+VM_SET_RELEASE=9.3
 
 VM_SHELL_COMMENTS="The default shell in NetBSD is `ksh`, if you want to use `sh` to execute the `run` script, please set `usesh` to `true`."
 
