--- a/conf/9.2.conf
+++ b/conf/9.2.conf
@@ -4,9 +4,9 @@ BUILDER_VERSION=0.9.0
 
 CONF_LINK="https://raw.githubusercontent.com/vmactions/netbsd-builder/v${BUILDER_VERSION}/conf/netbsd-${VM_RELEASE}.conf"
 
-OVA_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}.ova"
+OVA_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}.qcow2.xz"
 
 VM_PUBID_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-id_rsa.pub"
 
-HOST_ID_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-mac.id_rsa"
+HOST_ID_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-host.id_rsa"
 
