--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
         port: 8000
     - name: Test in NetBSD
       id: test
-      uses: vmactions/netbsd-vm@b34b947ed1be8cb27f92412e540dc411ebd440ef
+      uses: vmactions/netbsd-vm@${{ '${{GITHUB_SHA}}' }}
       with:
         envs: 'DEBUG MYTOKEN MYTOKEN2'
         prepare: |
@@ -84,7 +84,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Test in NetBSD
       id: test
-      uses: vmactions/netbsd-vm@b34b947ed1be8cb27f92412e540dc411ebd440ef
+      uses: vmactions/netbsd-vm@${{ '${{GITHUB_SHA}}' }}
       with:
         envs: 'MYTOKEN MYTOKEN2'
         prepare: |
