--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
         port: 8000
     - name: Test in NetBSD
       id: test
-      uses: vmactions/netbsd-vm@${{ '${{GITHUB_SHA}}' }}
+      uses: vmactions/netbsd-vm@${{GITHUB_SHA}}
       with:
         envs: 'DEBUG MYTOKEN MYTOKEN2'
         prepare: |
