--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,7 @@ jobs:
         port: 8000
     - name: Test in NetBSD
       id: test
-      uses: vmactions/netbsd-vm@${{ env.CURRENT_SHA }}
+      uses: vmactions/netbsd-vm@$CURRENT_SHA
       with:
         envs: 'DEBUG MYTOKEN MYTOKEN2'
         prepare: |
@@ -86,7 +86,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Test in NetBSD
       id: test
-      uses: vmactions/netbsd-vm@${{ env.CURRENT_SHA }}
+      uses: vmactions/netbsd-vm@$CURRENT_SHA
       with:
         envs: 'MYTOKEN MYTOKEN2'
         prepare: |
