--- a/.github/data/datafile.ini
+++ b/.github/data/datafile.ini
@@ -13,3 +13,6 @@ VM_SET_RELEASE=9.3
 VM_SHELL_COMMENTS="The default shell in NetBSD is `ksh`, if you want to use `sh` to execute the `run` script, please set `usesh` to `true`."
 
 
+TEST_RELEASES=@conf/test.releases
+
+
