--- a/.github/data/datafile.ini
+++ b/.github/data/datafile.ini
@@ -10,7 +10,7 @@ VM_RUN=@.github/data/run.txt
 
 VM_SET_RELEASE=9.3
 
-VM_SHELL_COMMENTS="The default shell in NetBSD is `ksh`, if you want to use `sh` to execute the `run` script, please set `usesh` to `true`."
+VM_SHELL_COMMENTS=""
 
 
 TEST_RELEASES=@conf/test.releases
