--- a/conf/10.0.conf
+++ b/conf/10.0.conf
@@ -1,10 +1,10 @@
 
-BUILDER_VERSION=0.9.7
+BUILDER_VERSION=0.9.8
 
 
 CONF_LINK="https://raw.githubusercontent.com/vmactions/netbsd-builder/v${BUILDER_VERSION}/conf/netbsd-${VM_RELEASE}.conf"
 
-OVA_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}.qcow2.xz"
+OVA_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}.qcow2.zst"
 
 VM_PUBID_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-id_rsa.pub"
 
