--- a/conf/10.0-aarch64.conf
+++ b/conf/10.0-aarch64.conf
@@ -2,11 +2,5 @@
 BUILDER_VERSION=2.0.0
 
 
-CONF_LINK="https://raw.githubusercontent.com/anyvm-org/netbsd-builder/v${BUILDER_VERSION}/conf/netbsd-${VM_RELEASE}-aarch64.conf"
-
-OVA_LINK="https://github.com/anyvm-org/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-aarch64.qcow2.zst"
-
-VM_PUBID_LINK="https://github.com/anyvm-org/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-aarch64-id_rsa.pub"
-
-HOST_ID_LINK="https://github.com/anyvm-org/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-aarch64-host.id_rsa"
+ANYVM_VERSION=0.0.9
 
