--- a/conf/9.2.conf
+++ b/conf/9.2.conf
@@ -1,14 +1,5 @@
 
 BUILDER_VERSION=0.9.9
 
-
-CONF_LINK="https://raw.githubusercontent.com/vmactions/netbsd-builder/v${BUILDER_VERSION}/conf/netbsd-${VM_RELEASE}.conf"
-
-OVA_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}.qcow2.zst"
-
-VM_PUBID_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-id_rsa.pub"
-
-HOST_ID_LINK="https://github.com/vmactions/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-host.id_rsa"
-
-VM_VBOX_LINK="https://raw.githubusercontent.com/vmactions/vbox/v1.0.3/vbox.sh"
+ANYVM_VERSION=0.0.9
 
