--- a/conf/9.3.conf
+++ b/conf/9.3.conf
@@ -2,14 +2,6 @@
 BUILDER_VERSION=2.0.0
 
 
-CONF_LINK="https://raw.githubusercontent.com/anyvm-org/netbsd-builder/v${BUILDER_VERSION}/conf/netbsd-${VM_RELEASE}.conf"
-
-OVA_LINK="https://github.com/anyvm-org/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}.qcow2.zst"
-
-VM_PUBID_LINK="https://github.com/anyvm-org/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-id_rsa.pub"
-
-HOST_ID_LINK="https://github.com/anyvm-org/netbsd-builder/releases/download/v${BUILDER_VERSION}/netbsd-${VM_RELEASE}-host.id_rsa"
-
-
+ANYVM_VERSION=0.0.9
 
 
