--- a/.github/data/datafile.ini
+++ b/.github/data/datafile.ini
@@ -17,7 +17,7 @@ VM_SHELL_COMMENTS=""
 
 TEST_RELEASES=@conf/test.releases
 
-RELEASE_TABLE=@.github/data/table.md
+RELEASE_TABLE=@https://raw.githubusercontent.com/anyvm-org/netbsd-builder/refs/heads/main/.github/data/table.md
 
 VM_TEST_EXCLUDE=@.github/data/exclude.txt
 
